--- a/src/views/contract/z-contract/add.html
+++ b/src/views/contract/z-contract/add.html
@@ -658,7 +658,7 @@
                             <div class="layui-input-inline" style="width: 100px;">
                                 <input type="tel" autocomplete="off" class="layui-input gray" placeholder="一次结清">
                             </div>
-                            <label class="layui-form-label">日租金</label>
+                            <label class="layui-form-label">日租金总额</label>
                             <div class="layui-input-inline" style="width: 100px;">
                             <input type="tel" name="DayRecnet"  autocomplete="off" class="layui-input" id="Recent1">
                             </div>
