--- a/src/views/contract/z-contract/edit.html
+++ b/src/views/contract/z-contract/edit.html
@@ -719,7 +719,7 @@
                             <div class="layui-input-inline" style="width: 100px;">
                                 <input type="tel" autocomplete="off" class="layui-input gray" placeholder="一次结清">
                             </div>
-                            <label class="layui-form-label">日租金</label>
+                            <label class="layui-form-label">日租金总额</label>
                             <div class="layui-input-inline" style="width: 100px;">
                              <input type="tel" name="DayRecnet" value="{{d[1].DayRecnet}}" autocomplete="off" class="layui-input" id="Recent1">
                             </div>
