--- a/src/views/gongdan/Repaire/edit.html
+++ b/src/views/gongdan/Repaire/edit.html
@@ -293,7 +293,7 @@ form.on('submit(save)', function (data) {
             <div class="layui-form-item">
                 <label class="layui-form-label">备注</label>
                 <div class="layui-input-inline">
-                    <textarea name="Remark" id="Remark" value="{{d[0].Remark}}" placeholder="备注" class="layui-textarea"></textarea>
+                    <textarea name="Remark" id="Remark"  placeholder="备注" class="layui-textarea">{{d[0].Remark}}</textarea>
                 </div>
             </div>
             <div class="layui-tab layui-tab-card" style="margin-top:0;">
